tests/NormalTests/paczka1/fuzzy1/12365374.err
Error in line 3: qE9Taug0 A354 30,2
Error in line 4: vH0ve6rI S864 24,8
Error in line 6: vH0ve6rI A217 16,3
Error in line 10: vH0ve6rI A354 59,7
Error in line 16: vH0ve6rI A195 63,3
Error in line 18: vH0ve6rI A354 78,4
Error in line 19: vH0ve6rI A195 50,5
Error in line 35: vH0ve6rI A217 57,3
